src/test/deca/context/valid/homeMade/tests/test337_type_op_unaire1.deca
// test valide de la règle 3.37


{
    int i;
    float f;
    boolean b;

    i = - 7;
    f = - 7.5;

    b = !true;
}